--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 Madsen SERVIUS <madsen@madsendynamics.com>
-Erico SAINT-CHARLES <>
+Erico SAINT-CHARLES <saintcharleserico@gmail.com>
 Freedy MERITUS <meritusfreedy@gmail.com>
